# canis

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
src/: main.rs  media.rs  templates.rs
templates/: index.html  playlist.html  watch.html
