[package]
name = "canis"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["fs", "trace",  "cors"] }
walkdir = "2"
askama = { version = "0.15.1" }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }

